# Meta-Writer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  requirements.txt
examples/: benchmark_template.py  run_benchmark_example.py
examples/tasks/: __init__.py  argumentative_essay.py  metabench_sample.py  scifi_story.py  survey_paper.py
metabench/: ReadMe.md  pyproject.toml
metabench/config/: baseline_cost.json
metabench/examples/: build_medical_benchmark_assets.py  metrics.jsonl  outputs.jsonl  samples.jsonl
metabench/src/metabench/: __init__.py  api_client.py  build_metrics.py  cli.py  generate_outputs.py  io_utils.py  local_metrics.py  pipeline.py  schemas.py  scoring.py  tokenization.py  validators.py
src/: orchestrator_v2.py
src/agents/: generator.py  section_planner.py
src/algorithms/: debugger.py  mrsd.py
src/core/: decision.py  diagnosis.py  ledger.py  meta_state.py  plan.py  state.py  validation.py
src/evaluation/: __init__.py  metric_collector.py
src/logging/: correction_log.py  run_logger.py
src/memory/: commitment_extractor.py  discourse_ledger.py  dtg_store.py
src/metrics/: alignment.py
src/references/: __init__.py  corpus.py  retriever.py  types.py
src/references/loaders/: __init__.py  markdown_loader.py
src/utils/: llm_client.py
src/validators/: online_validator.py  reference_validator.py
tests/: test_benchmark_template.py  test_discourse_ledger.py  test_english_only_migration.py  test_llm_client.py  test_main_cli.py  test_orchestrator_dsl_relations.py  test_orchestrator_v2.py
