[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabench"
version = "0.1.0"
description = "MetaBench 七维长文本评测流水线"
readme = "ReadMe.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tokenizer = [
  "transformers>=4.40",
  "tiktoken>=0.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
